@@ -781,8 +781,9 @@
 					<default>Polsat Box</default>
 					<constraints>
 						<options>
-							<option label="Polsat Box">Polsat Box</option>
 							<option label="Cyfrowy Polsat">Cyfrowy Polsat</option>
+							<option label="Ipla">Ipla</option>
+							<option label="Polsat Box">Polsat Box</option>
 						</options>
 					</constraints>
 					<dependencies>
