@@ -81,7 +81,7 @@
 		<setting id="pgobox_enabled" type="bool" label="59904" default="false"/>
 		<setting id="pgobox_username" type="text" label="55002" default="" visible="eq(-1,true)"/>
 		<setting id="pgobox_password" type="text" option="hidden" label="55003" default="" visible="eq(-2,true)"/>
-		<setting id="pgobox_client" type="select" label="30368" default="Polsat Box" values="Polsat Box|Cyfrowy Polsat" visible="eq(-3,true)"/>
+		<setting id="pgobox_client" type="select" label="30368" default="Polsat Box" values="Cyfrowy Polsat|Ipla|Polsat Box" visible="eq(-3,true)"/>
 		<setting id="priority_ipla" label="55009" type="enum" default="6" lvalues="55010|55011|55017|55012|55018|55013|55019|55014|55020|55021|55022|55023" visible="eq(-4,true)"/>
 		<setting id="pgobox_device_id" visible="false"/>
 		<setting id="pgobox_client_id" visible="false"/>
