@@ -1,4 +1,8 @@
-﻿wersja 9.5.3 - 2021-09-06
+﻿wersja 9.5.4 - 2021-09-06
+- naprawiono logowanie Polsat GO Box
+- ulepszone gesty dotykowe
+
+wersja 9.5.3 - 2021-09-06
 - dodany serwis Polsat GO Box
 - dodano gesty dotykowe
 - naprawiono usuwanie kontrolek, które powodowały awarię Kodi
